# enum-display-derive

./: Cargo.toml  README.md
.github/workflows/: check_pr.yml
examples/: foobar.rs
src/: lib.rs
tests/: derive.rs
