[package]
name = "enum-display-derive"
version = "0.1.2-alpha.1"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ihrwein/enum-display-derive"
homepage = "https://github.com/ihrwein/enum-display-derive"
documentation = "https://docs.rs/enum-display-derive"
description = """
Display trait's custom derive for simple enums.
"""

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
